tests/rosetta/out/Java/biorhythms.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/biorhythms.mochi:73:19: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/biorhythms.mochi:73:19

 73 |   return lengths[m-1]
    |                   ^

help:
  Parse error occurred. Check syntax near this location.